# blackwell-inference-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: API.md  BLOG.md  DESIGN.md  INTERVIEW.md  PERFORMANCE.md  ROADMAP.md
examples/: attention_demo.py
src/blackwell_inference/: __init__.py
src/blackwell_inference/asr/: __init__.py  qwen3_asr.py  server.py
src/blackwell_inference/attention/: __init__.py
src/blackwell_inference/attention/kda/: __init__.py  kda.py  kda_attention.cu
src/blackwell_inference/attention/linear/: __init__.py  chunked.py  core.py  decode.py
src/blackwell_inference/attention/mini/: __init__.py  mini.py  mini_attention_wrapper.py
src/blackwell_inference/bench/: __init__.py  asr_cli.py  attention_cli.py  attention_runner.py  delta_multi_cli.py  lora_cli.py  multi_lora_cli.py  profile_attention.py  spec_cli.py
src/blackwell_inference/lora/: __init__.py  delta.py  delta_multi.py  inference.py  multi.py
src/blackwell_inference/serve/: app.py  cli.py  models.py  schemas.py
src/blackwell_inference/serve/static/: index.html
src/blackwell_inference/spec/: __init__.py  ngram.py
src/blackwell_ops/: README.md  __init__.py
src/blackwell_ops/bench/: basic_bench.py  cuda_basic_bench.py  int8_gemm_bench.py  kv_quant_bench.py  lora_ops_bench.py  mla_decode_bench.py
src/blackwell_ops/cuda/: __init__.py  basic_ops.cu  cutlass_gemm.cu  kv_quant.cu  lora_ops.cu  lora_tiled.cu  mla_decode.cu
src/blackwell_ops/kernels/: __init__.py  int8_gemm.py  rmsnorm.py  rope.py
src/blackwell_ops/tests/: test_basic.py  test_cuda_basic.py  test_int8_gemm.py  test_kv_quant.py  test_lora_ops.py  test_lora_tiled.py  test_mla_decode.py
tests/: test_asr.py  test_attention.py  test_delta_multi.py  test_lora.py  test_spec.py
